--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 				<configuration>
 					<!--镜像名，这里用工程名-->
 					<imageName>${project.artifactId}</imageName>
-					<!--Dockerfile文件所在目录-->					<dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+					<!--Dockerfile文件所在目录-->					<dockerDirectory>${project.basedir}/src/main</dockerDirectory>
 					<!--TAG,这里用工程版本号-->
 					<imageTags>
 						<imageTag>${project.version}</imageTag>
