--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 				<version>0.4.12</version>
 				<!--docker镜像相关的配置信息-->
 				<configuration>
+						<dockerHost>http://47.102.204.252:2375</dockerHost>
 					<!--镜像名，这里用工程名-->
 					<imageName>${project.artifactId}</imageName>
 					<!--Dockerfile文件所在目录-->					<dockerDirectory>${project.basedir}/src/main</dockerDirectory>
@@ -60,6 +61,8 @@
 					<imageTags>
 						<imageTag>${project.version}</imageTag>
 					</imageTags>
+										<baseImage>java</baseImage>
+
 					<!--构建镜像的配置信息-->
 					<resources>
 						<resource>
